--- a/project-config.json
+++ b/project-config.json
@@ -8,7 +8,7 @@
     "repository": "https://github.com/Shengwang-Community/LyricsView-HarmonyOS"
   },
   "sdk": {
-    "mode": false,
+    "mode": true,
     "description": "SDK mode configuration: true for HAR package, false for source code"
   },
   "build": {
