--- a/build-profile.json5
+++ b/build-profile.json5
@@ -27,7 +27,8 @@
           "strictMode": {
             "caseSensitiveCheck": true,
             "useNormalizedOHMUrl": true
-          }
+          },
+          "nativeCompiler": "BiSheng"
         }
       }
     ],
